@@ -33,8 +33,7 @@
 </TR>
 <TR>
 
-<TD>&nbsp;&nbsp;<A HREF="#-buttonwidth">-buttonwidth</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-cancel">-cancel</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-cancel">-cancel</A></TD>
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="#-default">-default</A></TR>
@@ -139,18 +138,13 @@ Specifies a bitmap to display at the left of the user frame.
 <B>image</B> option override <B>bitmap</B>.
 </DD>
 </DL>
-<DL><DT><A NAME="-buttonwidth"><B>-buttonwidth (read-only)</B></A></DT>
-<DD>
-
-Specifies the width of the buttons as specified for the option <B>width</B>
-of the <B>button</b> widget.
-</DD>
-</DL>
 <DL><DT><A NAME="-cancel"><B>-cancel</B></A></DT>
 <DD>
 
-Specifies the number of the cancel button of the Dialog. When user press Esc in the Dialog,
-this button is invoked.
+Specifies the number of the cancel button of the Dialog. When user presses Esc or the windows close button,
+this button is invoked.<BR>
+If set to <B>-1</B>, Esc does not invoke anything.
+The window close button <I>destroys</I> the dialog in this case and returns <B>-1</B>.
 </DD>
 </DL>
 <DL><DT><A NAME="-default"><B>-default</B></A></DT>
